[package]
name = "tsb-avl-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio          = { version = "1.44", features = ["full"] }
clap           = { version = "4", features = ["derive"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

nom-teltonika = { version = "*", features = ["serde", "tokio"] }
lapin          = { version = "2.5", default-features = false, features = ["native-tls"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
hex            = "0.4"