[package]
name = "tsb-avl-publisher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
tonic-build = "0.13" 

[dependencies]
tokio          = { version = "1.44", features = ["full"] }
clap           = { version = "4", features = ["derive"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

nom-teltonika = { version = "*", features = ["serde", "tokio"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
hex            = "0.4"
tonic = "0.13.0"
tokio-stream = "0.1.17"
prost = "0.13.5"
